<resources>
    <string name="app_name">UCSC Tutor</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">sm3IJPOksqi4vIIN99wmppWnGWFZ0lvsVLNQ9VuO</string>
    <string name="parse_client_key">WVDV3wAFEVf5BWn6uG9kBkQvgv52kP23rzfRBpQI</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>

    <string name="lname">Last Name</string>
    <string name="fname">First Name</string>
    <string name="email">Email (UCSC Email)</string>
    <string name="emailconfirm">Confirm Email (UCSC Email)</string>
    <string name="passwordconfirm">Re-type Password</string>

    <string name="LoginBtn">Login</string>
    <string name="SignupBtnTutor">Sign Up as Tutor</string>
    <string name="SignupBtnStudent">Sign Up as Student</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next Page >></string>
    <string name="save">Save Profile</string>

    <string name="LogoutBtn">Log Out</string>
    <string name="home">Profile</string>
    <string name="description">Description</string>
    <string name="nobio">No Description</string>
    <string name="nocourses">No Courses</string>
    <string name="tutorcourses">Courses I Can Tutor</string>
    <string name="studentcourses">Courses I Want A Tutor For</string>
    <string name="tempbio">Tell Us About Yourself</string>

    <string name="title_activity_tutor">TutorActivity</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_home_prototype">HomePrototype</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_perform_search">PerformSearch</string>

    <string name="searchable_label">Search</string>
    <string name="searchable_hint">Search (i.e: CMPS 115)</string>
    <string name="title_activity_search_users">Search</string>

    <string name="login_error_message">Please make sure enter you username and password!</string>
    <string name="login_error_title">Opss!</string>
    <string name="error_title">We\'re sorry :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture (optional)</string>
    <string name="tutorclass">What Class/Subject do you want to tutor?</string>
    <string name="transcript">Transcript (To see if you qualify)</string>
    <string name="location">Location (meeting place)</string>
    <string name="availability">Availability</string>

    <string name="pic">Choose a Picture</string>
    <string name="upload">Upload</string>
</resources>
