<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tutorscrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    android:background="#0277BD">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:text="@string/fname"
            android:id="@+id/fname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fnamefield"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:text="@string/lname"
            android:id="@+id/lname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lnamefield"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:text="@string/Username"
            android:id="@+id/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/usernamefield"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:text="@string/email"
            android:id="@+id/tutoremail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailfield"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:id="@+id/passwordtext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordtextfield"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:text="@string/passwordconfirm"
            android:id="@+id/passwordconfirm" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordconfirmfield"
            android:textColor="#ffffff" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="#A96200"
            custom:pb_colorPressed="#804A00"
            android:id="@+id/nexttutor"
            android:layout_marginBottom="67dp" />

    </LinearLayout>

</ScrollView>