<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textColor="@color/blue_normal"
        android:text="@string/fname"
        android:id="@+id/studentfirstname"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentfirstnamefield"
        android:layout_below="@+id/studentfirstname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textColor="@color/blue_normal"
        android:text="@string/lname"
        android:id="@+id/studentlastname"
        android:layout_below="@+id/studentfirstnamefield"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentlastnamefield"
        android:layout_below="@+id/studentlastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textColor="@color/blue_normal"
        android:text="@string/email"
        android:id="@+id/studentemail"
        android:layout_below="@+id/studentlastnamefield"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/studentemailfield"
        android:layout_below="@+id/studentemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textColor="@color/blue_normal"
        android:text="@string/Username"
        android:id="@+id/studentusername"
        android:layout_below="@+id/studentemailfield"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentusernamefield"
        android:layout_below="@+id/studentusername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textColor="@color/blue_normal"
        android:text="@string/Password"
        android:id="@+id/studentpassword"
        android:layout_below="@+id/studentusernamefield"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/studentpasswordfield"
        android:layout_below="@+id/studentpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading..."
        custom:pb_textError="Error"
        custom:pb_colorError="@color/red_error"
        android:id="@+id/submitstudent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="67dp"/>
</RelativeLayout>